--- a/tool-dev.yml
+++ b/tool-dev.yml
@@ -17,7 +17,7 @@ spring:
         stream-output:
           destination: stream-topic
           producer:
-            partition-key-expression: spring
+            partition-key-expression: header["uu"]
             partition-count: 2 
   # 开启链路追踪
   sleuth:
